--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
-
+.gitignore
 # compiled output
 /dist
 /tmp
@@ -8,7 +8,7 @@
 /bazel-out
 
 # dependencies
-/node_modules
+./node_modules
 
 # profiling files
 chrome-profiler-events.json
@@ -44,3 +44,4 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+node_modules
